# rust_mysql_project

./: .env  Cargo.toml
src/: db.rs  main.rs  models.rs  search.rs
src/services/: actor.rs  film.rs  film_text.rs  mod.rs  search.rs
